fixingSpacingIssues

--- a/midtermProject/style/stylesheet.css
+++ b/midtermProject/style/stylesheet.css
@@ -53,7 +53,7 @@ li {
 
 .slideTrack {
   padding: 0px;
-  margin-top: 10px;
+  margin-top: 0px;
   list-style: none;
   background-color: #233B39;
   color: #233B39;
@@ -76,6 +76,7 @@ li {
   text-align: center;
   font-family: 'Playfair Display', serif;
   font-size: 40px;
+  margin: 20px 0;
 }
 
 .checkboxes {
